adding MainChatController and ServerConnectionController